# Induction-ARIITK-MyFork

./: README.md
.github/workflows/: classroom.yml
MedhaSingh/drone_fleet/: CMakeLists.txt  package.xml
MedhaSingh/drone_fleet/include/drone_fleet/: AutonomousDrone.hpp  Drone.hpp  DroneExceptions.hpp  MissionDrone.hpp  Utils.hpp  Vehicle.hpp
MedhaSingh/drone_fleet/src/: AutonomousDrone.cpp  Drone.cpp  MissionDrone.cpp  Utils.cpp  Vehicle.cpp  drone_node.cpp
Suchir_OTW/task_6/swarm_tracker/: .gitignore  package.xml  setup.py
Suchir_OTW/task_6/swarm_tracker/launch/: tracker.launch.py
Suchir_OTW/task_6/swarm_tracker/src/: follower_node.py
amogh_b/SmartBank/: SmartBank.cpp
aryaman_das/: DOCKERFILE
gauri_s/DroneSubmission/: dockerignore  gitignore
gauri_s/DroneSubmission/fleet_ws/: Dockerfile  run.sh
gauri_s/DroneSubmission/fleet_ws/src/drone_fleet/: package.xml
gauri_s/DroneSubmission/fleet_ws/src/drone_fleet/launch/: fleet.launch.py
gauri_s/DroneSubmission/fleet_ws/src/drone_fleet/src/: drone_node.cpp  fleet_manager.cpp  health_monitor.cpp
gauri_s/DroneSubmission/part1/: CMakeLists.txt
gauri_s/DroneSubmission/part1/src/: main.cpp
gauri_s/fleet_ws/src/drone_fleet/src/: drone_node.cpp
gauri_s/task_6/: .gitignore  README.md  task_6.sdf
gauri_s/task_6/swarm_tracker/: package.xml  setup.py
gauri_s/task_6/swarm_tracker/launch/: tracker.launch.py
gauri_s/task_6/swarm_tracker/src/: follower_node.py  leader_evasion.py
nakul_s/task_6/swarm_tracker/: package.xml  setup.cfg  setup.py
nakul_s/task_6/swarm_tracker/launch/: tracker.launch.py
nakul_s/task_6/swarm_tracker/resource/: swarm_tracker
nakul_s/task_6/swarm_tracker/src/: __init__.py  follower_node.py  leader_evasion.py
tasks/task_6/: README.md  task_6.sdf
tasks/task_6/task_6_src/: follower_node.py  leader_evasion.py
tls_srikar/: Dockerfile
