<?xml version="1.0"?>
<package format="3">
  <name>drone_fleet</name>
  <version>1.0.0</version>
  <description>ROS 2 drone fleet simulation</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
